@@ -218,6 +218,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #14099: Writing to ZipFile and reading multiple ZipExtFiles is
+  threadsafe now.
+
 - Issue #19361: JSON decoder now raises JSONDecodeError instead of ValueError.
 
 - Issue #18518: timeit now rejects statements which can't be compiled outside
